<resources>
    <string name="app_name">Login</string>
    <string name="login">Login</string>
    <string name="email">email</string>
    <string name="password">Password</string>
    <string name="logout">LOGOUT</string>
    <string name="visualization">매출 시각화</string>
    <string name="management">매출 관리</string>
    <string name="solution">솔루션</string>
    <string name="washingMachine">WashingMachine</string>
    <string name="calendarActivity">CalendarActivity</string>
    <string name="calendar">Calendar</string>
    <string name="monthSalesManage">월간매출관리</string>
    <string name="add">추가</string>
    <string name="순이익">순이익 : </string>
    <string name="지출">지출 : </string>
    <string name="매출">매출 : </string>
    <string name="월지출">월간 지출 :</string>
    <string name="지출입력">지출을 입력해주세요</string>
    <string name="저장">저장</string>
    <string name="매출입력">매출을 입력해주세요</string>
    <string name="월매출">월간 매출 :</string>
    <string name="월지출입력">월간 지출 입력</string>
    <string name="보조">보조 시설 :</string>
    <string name="세탁용품">세탁용품 :</string>
    <string name="운동화">운동화 :</string>
    <string name="세탁건조">세탁/건조 :</string>
    <string name="날짜별매출입력">5월 23일 매출 입력</string>
    <string name="hello_user">Hello User</string>
    <string name="show매출">매출을 보여주세요.</string>
    <string name="show지출">지출을 보여주세요.</string>
    <string name="show순이익">순이익을 보여주세요.</string>
    <string name="기타">기타 : </string>
    <string name="goBack">메인화면으로</string>
    <string name="고정비용">고정비용 : </string>
    <string name="고정비용입력">고정비용을 입력해주세요</string>
    <string name="수도세">수도세 : </string>
    <string name="수도세입력">수도세를 입력해주세요</string>
    <string name="전기세">전기세 : </string>
    <string name="전기세입력">전기세를 입력해주세요</string>
    <string name="광고비">광고비 : </string>
    <string name="광고비입력">광고비를 입력해주세요</string>
    <string name="지출추가">지출 입력</string>
    <string name="비품지출">비품지출 입력</string>
    <string name="월비품지출입력">월간 비품 지출 입력</string>
    <string name="세제">세제 : </string>
    <string name="비용입력">비용을 입력해주세요</string>
    <string name="섬유유연제">섬유유연제 : </string>
    <string name="바운스">바운스 : </string>
    <string name="세탁비닐">세탁비닐 : </string>
    <string name="수리비용">수리비 : </string>
    <string name="title_activity_list2">ListActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>/>
</resources>